fixed scrollbar color

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #d6bebb;
+    background-color: #c4adaa;
 }
 
 ::-webkit-scrollbar-thumb {
